[tool.poetry]
name = "repl_python3_masteringpython3"
version = "0.1.0"
description = ""
authors = ["tyrenG123 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
scapy = "^2.4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
